@@ -39,6 +39,7 @@ import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
 import java.io.File;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Arrays;
 import java.util.Collection;
@@ -101,7 +102,7 @@ public class StoreLatencyPlugin_QueueIntegrationTest extends HazelcastTestSuppor
 
         assertTrueEventually(() -> {
             File file = getNodeEngineImpl(hz).getDiagnostics().currentFile();
-            String content = Files.readString(file.toPath());
+            String content = new String(Files.readAllBytes(file.toPath()), StandardCharsets.UTF_8);
             assertContains(content, QUEUE_NAME);
         });
     }
