@@ -31,6 +31,7 @@ import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
 
 import java.io.File;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Collection;
 import java.util.Map;
@@ -72,7 +73,7 @@ public class StoreLatencyPlugin_MapIntegrationTest extends HazelcastTestSupport 
 
         assertTrueEventually(() -> {
             File file = getNodeEngineImpl(hz).getDiagnostics().currentFile();
-            String content = Files.readString(file.toPath());
+            String content = new String(Files.readAllBytes(file.toPath()), StandardCharsets.UTF_8);
             assertContains(content, "mappy");
         });
     }
